--- a/src/app/pages/manage-employee/manage-employee.component.html
+++ b/src/app/pages/manage-employee/manage-employee.component.html
@@ -1,38 +1,31 @@
-<div class="container m-5">
-    <h1 class="text-center mb-4 bg-info p-4 text-white fw-bolder">Add Employee</h1>
+<div class="container m-10 mt-5">
+    <h1 class="text-center mb-4 bg-secondary p-4 text-white fw-bolder">Add Employee</h1>
     <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1"></span>
-        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="First Name" aria-label="Username" [(ngModel)]="employeeObj.firstName" aria-describedby="basic-addon1">
       </div>
-      
+
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-        <span class="input-group-text" id="basic-addon2">example.com</span>
+        <input type="text" class="form-control" placeholder="Last Name" aria-label="Username" [(ngModel)]="employeeObj.lastName" aria-describedby="basic-addon1">
       </div>
-      
-      <div class="mb-3">
-        <label for="basic-url" class="form-label">Your vanity URL</label>
-        <div class="input-group">
-          <span class="input-group-text" id="basic-addon3">https://example.com/users/</span>
-          <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-        </div>
-        <div class="form-text" id="basic-addon4">Example help text goes outside the input group.</div>
-      </div>
-      
+
       <div class="input-group mb-3">
-        <span class="input-group-text">$</span>
-        <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-        <span class="input-group-text">.00</span>
+        <input type="text" class="form-control" placeholder="Gmail" aria-label="Recipient's username" [(ngModel)]="employeeObj.email" aria-describedby="basic-addon2">
       </div>
       
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Username" aria-label="Username">
-        <span class="input-group-text"></span>
-        <input type="text" class="form-control" placeholder="Server" aria-label="Server">
-      </div>
+      <select class="form-select mb-3" aria-label="Default select example" [(ngModel)]="employeeObj.departmentId">
+        <option value="">Department</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+
+      <select class="form-select mb-3" aria-label="Default select example" [(ngModel)]="employeeObj.roleId">
+        <option value="">Role</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+
+      <button type="button" class="btn btn-success" (click)="addEmployee()">Add Employee</button>
       
-      <div class="input-group">
-        <span class="input-group-text">With textarea</span>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-      </div>
 </div>
